@@ -1,9 +1,9 @@
-$NetBSD: distinfo,v 1.31 2012/05/14 18:46:21 abs Exp $
+$NetBSD: distinfo,v 1.32 2012/05/15 13:20:03 abs Exp $
 
 SHA1 (pulseaudio-0.9.21.tar.gz) = 0309c97f7e0812e243c1bb80a4b74dc26369ac22
 RMD160 (pulseaudio-0.9.21.tar.gz) = 6db0725253228b673a78cbfae4824fadce2198ed
 Size (pulseaudio-0.9.21.tar.gz) = 2056896 bytes
-SHA1 (patch-aa) = 3c8f4a22cd0d173b495e91e56940f6dc15ba9766
+SHA1 (patch-aa) = 201916051465bcb694bc6490dd6d23265ee02241
 SHA1 (patch-ab) = 1cf47a55b1c794b315646379ae03d633dc1d348f
 SHA1 (patch-ac) = b42e6ef8ff2851ea78a6eae6cb6241c94d74b2d0
 SHA1 (patch-ad) = 5ae0e5d8b0b7622c35cb2fabba4a33b673cbd442
