@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.1.1.1 2012/01/29 20:59:59 jmmv Exp $
 include/lutok/c_gate.hpp
 include/lutok/debug.hpp
 include/lutok/exceptions.hpp
@@ -58,6 +58,7 @@ share/doc/lutok/html/a00048.html
 share/doc/lutok/html/a00049.html
 share/doc/lutok/html/annotated.html
 share/doc/lutok/html/bc_s.png
+share/doc/lutok/html/bdwn.png
 share/doc/lutok/html/classes.html
 share/doc/lutok/html/closed.png
 share/doc/lutok/html/doxygen.css
@@ -78,58 +79,109 @@ share/doc/lutok/html/nav_f.png
 share/doc/lutok/html/nav_h.png
 share/doc/lutok/html/open.png
 share/doc/lutok/html/search/all_5f.html
+share/doc/lutok/html/search/all_5f.js
 share/doc/lutok/html/search/all_61.html
+share/doc/lutok/html/search/all_61.js
 share/doc/lutok/html/search/all_63.html
+share/doc/lutok/html/search/all_63.js
 share/doc/lutok/html/search/all_64.html
+share/doc/lutok/html/search/all_64.js
 share/doc/lutok/html/search/all_65.html
+share/doc/lutok/html/search/all_65.js
 share/doc/lutok/html/search/all_66.html
+share/doc/lutok/html/search/all_66.js
 share/doc/lutok/html/search/all_67.html
+share/doc/lutok/html/search/all_67.js
 share/doc/lutok/html/search/all_68.html
+share/doc/lutok/html/search/all_68.js
 share/doc/lutok/html/search/all_69.html
+share/doc/lutok/html/search/all_69.js
 share/doc/lutok/html/search/all_6c.html
+share/doc/lutok/html/search/all_6c.js
 share/doc/lutok/html/search/all_6e.html
+share/doc/lutok/html/search/all_6e.js
 share/doc/lutok/html/search/all_6f.html
+share/doc/lutok/html/search/all_6f.js
 share/doc/lutok/html/search/all_70.html
+share/doc/lutok/html/search/all_70.js
 share/doc/lutok/html/search/all_72.html
+share/doc/lutok/html/search/all_72.js
 share/doc/lutok/html/search/all_73.html
+share/doc/lutok/html/search/all_73.js
 share/doc/lutok/html/search/all_74.html
+share/doc/lutok/html/search/all_74.js
 share/doc/lutok/html/search/all_75.html
+share/doc/lutok/html/search/all_75.js
 share/doc/lutok/html/search/all_77.html
+share/doc/lutok/html/search/all_77.js
 share/doc/lutok/html/search/all_7e.html
+share/doc/lutok/html/search/all_7e.js
 share/doc/lutok/html/search/classes_61.html
+share/doc/lutok/html/search/classes_61.js
 share/doc/lutok/html/search/classes_64.html
+share/doc/lutok/html/search/classes_64.js
 share/doc/lutok/html/search/classes_65.html
+share/doc/lutok/html/search/classes_65.js
 share/doc/lutok/html/search/classes_66.html
+share/doc/lutok/html/search/classes_66.js
 share/doc/lutok/html/search/classes_69.html
+share/doc/lutok/html/search/classes_69.js
 share/doc/lutok/html/search/classes_73.html
+share/doc/lutok/html/search/classes_73.js
 share/doc/lutok/html/search/close.png
 share/doc/lutok/html/search/defines_72.html
+share/doc/lutok/html/search/defines_72.js
 share/doc/lutok/html/search/files_63.html
+share/doc/lutok/html/search/files_63.js
 share/doc/lutok/html/search/files_64.html
+share/doc/lutok/html/search/files_64.js
 share/doc/lutok/html/search/files_65.html
+share/doc/lutok/html/search/files_65.js
 share/doc/lutok/html/search/files_6f.html
+share/doc/lutok/html/search/files_6f.js
 share/doc/lutok/html/search/files_73.html
+share/doc/lutok/html/search/files_73.js
 share/doc/lutok/html/search/files_74.html
+share/doc/lutok/html/search/files_74.js
 share/doc/lutok/html/search/functions_61.html
+share/doc/lutok/html/search/functions_61.js
 share/doc/lutok/html/search/functions_63.html
+share/doc/lutok/html/search/functions_63.js
 share/doc/lutok/html/search/functions_64.html
+share/doc/lutok/html/search/functions_64.js
 share/doc/lutok/html/search/functions_65.html
+share/doc/lutok/html/search/functions_65.js
 share/doc/lutok/html/search/functions_66.html
+share/doc/lutok/html/search/functions_66.js
 share/doc/lutok/html/search/functions_67.html
+share/doc/lutok/html/search/functions_67.js
 share/doc/lutok/html/search/functions_68.html
+share/doc/lutok/html/search/functions_68.js
 share/doc/lutok/html/search/functions_69.html
+share/doc/lutok/html/search/functions_69.js
 share/doc/lutok/html/search/functions_6c.html
+share/doc/lutok/html/search/functions_6c.js
 share/doc/lutok/html/search/functions_6e.html
+share/doc/lutok/html/search/functions_6e.js
 share/doc/lutok/html/search/functions_6f.html
+share/doc/lutok/html/search/functions_6f.js
 share/doc/lutok/html/search/functions_70.html
+share/doc/lutok/html/search/functions_70.js
 share/doc/lutok/html/search/functions_72.html
+share/doc/lutok/html/search/functions_72.js
 share/doc/lutok/html/search/functions_73.html
+share/doc/lutok/html/search/functions_73.js
 share/doc/lutok/html/search/functions_74.html
+share/doc/lutok/html/search/functions_74.js
 share/doc/lutok/html/search/functions_75.html
+share/doc/lutok/html/search/functions_75.js
 share/doc/lutok/html/search/functions_77.html
+share/doc/lutok/html/search/functions_77.js
 share/doc/lutok/html/search/functions_7e.html
+share/doc/lutok/html/search/functions_7e.js
 share/doc/lutok/html/search/mag_sel.png
 share/doc/lutok/html/search/namespaces_61.html
+share/doc/lutok/html/search/namespaces_61.js
 share/doc/lutok/html/search/nomatches.html
 share/doc/lutok/html/search/search.css
 share/doc/lutok/html/search/search.js
@@ -137,9 +189,13 @@ share/doc/lutok/html/search/search_l.png
 share/doc/lutok/html/search/search_m.png
 share/doc/lutok/html/search/search_r.png
 share/doc/lutok/html/search/variables_5f.html
+share/doc/lutok/html/search/variables_5f.js
 share/doc/lutok/html/search/variables_6c.html
+share/doc/lutok/html/search/variables_6c.js
 share/doc/lutok/html/search/variables_6f.html
+share/doc/lutok/html/search/variables_6f.js
 share/doc/lutok/html/search/variables_73.html
+share/doc/lutok/html/search/variables_73.js
 share/doc/lutok/html/tab_a.png
 share/doc/lutok/html/tab_b.png
 share/doc/lutok/html/tab_h.png
