@@ -1,5 +1,5 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2012/01/29 20:59:59 jmmv Exp $
 
-SHA1 (lutok-0.1.tar.gz) = 2d56bdd27eedcb7cea26fea3ad1bb258c248b9d0
-RMD160 (lutok-0.1.tar.gz) = 60d0a59cd45b14cd64c2e8103fe2e5b3168dcddc
-Size (lutok-0.1.tar.gz) = 446360 bytes
+SHA1 (lutok-0.2.tar.gz) = ca44640bba4bd50aca28e2ed10fb2ec99f14573f
+RMD160 (lutok-0.2.tar.gz) = ee91a8acf896baac276fab7d748d6e695702cf24
+Size (lutok-0.2.tar.gz) = 492333 bytes
