@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1669 2012/05/30 15:29:25 wiz Exp $
+$NetBSD: CHANGES-2012,v 1.1671 2012/05/30 20:33:43 cheusov Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2586,3 +2586,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated net/Radicale to 0.6.4nb2 [wiz 2012-05-30]
 	Added devel/libusbx version 1.0.11 [wiz 2012-05-30]
 	Added devel/libusb-compat version 0.1.4 [wiz 2012-05-30]
+	Updated shells/dash to 0.5.7 [cheusov 2012-05-30]
+	Updated devel/lutok to 0.2 [jmmv 2012-05-30]
